style: fix the alignment of the menu

--- a/#src/scss/header/header.scss
+++ b/#src/scss/header/header.scss
@@ -1,6 +1,6 @@
 .navbar {
   padding: 0 8.4rem;
-  width: 1440px;
+  width: 100%;
   height: $header-hight-desktop;
   background-color: $header-bg-color;
 }
@@ -10,7 +10,7 @@
 }
 
 .navbar-brand {
-  margin-right: 0;
+  margin-right: 4.8rem;
 }
 
 .nav-link {
@@ -61,6 +61,10 @@
   .nav-link {
     font-size: $header-font-size-tablet;
     font-weight: $header-font-weight-tablet;
+  }
+
+  .navbar-brand {
+    margin-right: 1.75rem;
   }
 }
 
